Fix issue where HW view columns appear too tall on smaller screens

--- a/app/homework/HomeworkPage.styl
+++ b/app/homework/HomeworkPage.styl
@@ -2,9 +2,6 @@
 	width: 100%
 	height: 100%
 
-	.col-md-3
-		height: 100%
-
 	.todayContainer
 		display: flex
 		flex-direction: column
